--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   flutter_screenutil: ^5.9.3
   go_router: ^17.0.0
   flutter_svg: ^2.2.2
+  pin_code_fields: ^8.0.1
 
 dev_dependencies:
   flutter_test:
