--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   go_router: ^17.0.0
   flutter_svg: ^2.2.2
   pin_code_fields: ^8.0.1
+  carousel_slider: ^5.1.1
+  dots_indicator: ^4.0.1
 
 dev_dependencies:
   flutter_test:
